Minor Edit: Moved clearFilters() to index.js

--- a/searchfilters.html
+++ b/searchfilters.html
@@ -9,71 +9,71 @@
     <script src="js/index.js"></script>
     <script>
         
-        function clearFilters() {
-            //on click of clear filters button, remove all selected classes from filter buttons
-            const filterTags = document.querySelectorAll(".filter-tags-btn");
-            const sortBtn = document.querySelectorAll(".sort-btn-item");
-            const filterDropdown = document.querySelectorAll(".filter-item");
-            const cityDropdown = document.querySelector(".city-dropdown-content");
-            const parkDropdown = document.querySelector(".park-dropdown-content");
-            const filterDiv = document.querySelector(".filter-dropdown-div");
-            const dropdownLinks = filterDiv.querySelectorAll("a");
+        // function clearFilters() {
+        //     //on click of clear filters button, remove all selected classes from filter buttons
+        //     const filterTags = document.querySelectorAll(".filter-tags-btn");
+        //     const sortBtn = document.querySelectorAll(".sort-btn-item");
+        //     const filterDropdown = document.querySelectorAll(".filter-item");
+        //     const cityDropdown = document.querySelector(".city-dropdown-content");
+        //     const parkDropdown = document.querySelector(".park-dropdown-content");
+        //     const filterDiv = document.querySelector(".filter-dropdown-div");
+        //     const dropdownLinks = filterDiv.querySelectorAll("a");
 
-            // remove selected class from filter tags
-            filterTags.forEach(function (item) {
-                if (item.classList.contains("filter-tags-btn-selected")) {
-                    item.classList.remove("filter-tags-btn-selected");
-                }
-            });
+        //     // remove selected class from filter tags
+        //     filterTags.forEach(function (item) {
+        //         if (item.classList.contains("filter-tags-btn-selected")) {
+        //             item.classList.remove("filter-tags-btn-selected");
+        //         }
+        //     });
 
-            // remove selected class from sort buttons
-            sortBtn.forEach(function (item) {
-                if (item.classList.contains("sort-btn-item-selected")) {
-                    item.classList.remove("sort-btn-item-selected");
-                }
-            });
+        //     // remove selected class from sort buttons
+        //     sortBtn.forEach(function (item) {
+        //         if (item.classList.contains("sort-btn-item-selected")) {
+        //             item.classList.remove("sort-btn-item-selected");
+        //         }
+        //     });
 
-            // clear the filterResultText node by setting it to an empty text node
-            const filterResult = document.querySelector("#filter-result");
-            if (filterResult.hasChildNodes()) {
-                filterResult.removeChild(filterResult.firstChild);
-            }
+        //     // clear the filterResultText node by setting it to an empty text node
+        //     const filterResult = document.querySelector("#filter-result");
+        //     if (filterResult.hasChildNodes()) {
+        //         filterResult.removeChild(filterResult.firstChild);
+        //     }
 
-            // remove userFilters from sessionStorage
-            let userFilters = JSON.parse(sessionStorage.getItem('userFilters'));
-            // remove userFilters from sessionStorage
-            userFilters = {
-                parkCity: null,
-                sort: null,
-                tags: {
-                    wheelchair: false,
-                    photosensitivity: false,
-                    serviceAnimal: false,
-                    sizeShape: false,
-                    childSwap: false,
-                }
-            };
-            // sessionStorage.removeItem("userFilters");
-            sessionStorage.setItem('userFiltersCleared', true); // set userFiltersCleared to true'
-            sessionStorage.setItem('userFilters', JSON.stringify(userFilters));
-            console.log(userFilters);
+        //     // remove userFilters from sessionStorage
+        //     let userFilters = JSON.parse(sessionStorage.getItem('userFilters'));
+        //     // remove userFilters from sessionStorage
+        //     userFilters = {
+        //         parkCity: null,
+        //         sort: null,
+        //         tags: {
+        //             wheelchair: false,
+        //             photosensitivity: false,
+        //             serviceAnimal: false,
+        //             sizeShape: false,
+        //             childSwap: false,
+        //         }
+        //     };
+        //     // sessionStorage.removeItem("userFilters");
+        //     sessionStorage.setItem('userFiltersCleared', true); // set userFiltersCleared to true'
+        //     sessionStorage.setItem('userFilters', JSON.stringify(userFilters));
+        //     console.log(userFilters);
 
-            // if(!userFilters) {
-            //     let userFilters = {
-            //         parkCity: null,
-            //         sort: null,
-            //         tags: {
-            //             wheelchair: false,
-            //             photosensitivity: false,
-            //             serviceAnimal: false,
-            //             sizeShape: false,
-            //             childSwap: false,
-            //         }
-            //     };
-            //     console.log(userFilters);
-            // }
+        //     // if(!userFilters) {
+        //     //     let userFilters = {
+        //     //         parkCity: null,
+        //     //         sort: null,
+        //     //         tags: {
+        //     //             wheelchair: false,
+        //     //             photosensitivity: false,
+        //     //             serviceAnimal: false,
+        //     //             sizeShape: false,
+        //     //             childSwap: false,
+        //     //         }
+        //     //     };
+        //     //     console.log(userFilters);
+        //     // }
 
-        }
+        // }
 
         // this event listener waits for the DOM to load before running the function
         document.addEventListener("DOMContentLoaded", function () {
