--- a/home.html
+++ b/home.html
@@ -45,7 +45,7 @@
                             style="width: 16em; padding: 10px; border-radius: 25px;">
                         <div style="position: relative;top: -11em;left: 0.7em;">
                             <!-- <i class="fas fa-plus" style="color: white;"></i> -->
-                            <span class="fa-stack">
+                            <span class="fa-stack add-ride-list-btn">
                                 <i class="fa fa-circle fa-stack-2x" style="color: rgb(0, 0, 0);"></i>
                                 <i class="fa-regular fa-circle-xmark fa-stack-2x fan-faves-to-list"
                                     style="color: white;transform: rotate(45deg);"></i>
