--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
                 
                 <!-- Template for search result item -->
                 <template id="fan-result-template">
-                    <div style="display: inline-block; background-color: black; border-radius: 20px;margin-right:2.5em; margin-left: 1em;">
+                    <div class="fan-favs-item" style="display: inline-block; background-color: black; border-radius: 20px;margin-right:2.5em; margin-left: 1em;">
                         <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="fan-fav-img"
                             style="width: 16em; padding: 10px; border-radius: 25px;">
                         <div style="position: relative;top: -11em;left: 0.7em;">
@@ -51,7 +51,7 @@
                                     style="color: white;transform: rotate(45deg);"></i>
                             </span>
                         </div>
-                        <div style="width: 100%; height: 33%; padding: 10px;margin-top: -3.3em;">
+                        <div class="fan-fan-info-div" style="width: 100%; height: 33%; padding: 10px;margin-top: -3.3em;">
                             <p class="proxima-bold font-13pt fan-fav-name"
                                 style="color: white;width: 60% !important;max-width: 25em !important;white-space: normal !important;overflow-wrap: break-word !important;line-height: 16px;height: 2rem;">
                                 Despicable Me Minion Mayhem</p>
@@ -63,7 +63,7 @@
                     
                             <!--Fan Favorites: Accessibility & Star Rating-->
                             <div
-                                style="display: flex; float: right; position: relative; bottom: 3em;margin-bottom: -2.7em;margin-top: -0.5em;">
+                                class="fan-fan-ratings-div" style="display: flex; float: right; position: relative; bottom: 3em;margin-bottom: -2.7em;margin-top: -0.5em;">
                                 <!--Accessibility Rating-->
                                 <div style="display: inline; align-items: center;">
                                     <span class="fa-stack">
@@ -96,10 +96,10 @@
             <!--------->
             <!---Scroller Dots-->
             <div class="scroll-dots">
-                <i class="fa-solid fa-circle scroll-dot"></i>
-                <i class="fa-regular fa-circle scroll-dot"></i>
-                <i class="fa-regular fa-circle scroll-dot"></i>
-                <i class="fa-regular fa-circle scroll-dot"></i>
+                <i class="fa-regular fa-circle scroll-dot dot-one"></i>
+                <i class="fa-regular fa-circle scroll-dot dot-two"></i>
+                <i class="fa-regular fa-circle scroll-dot dot-three"></i>
+                <i class="fa-regular fa-circle scroll-dot dot-four"></i>
             </div>
             <!------------------->
         </div>
