Feature Added: Leaving Search Pages clears Filters

--- a/searchfilters.html
+++ b/searchfilters.html
@@ -9,72 +9,6 @@
     <script src="js/index.js"></script>
     <script>
         
-        // function clearFilters() {
-        //     //on click of clear filters button, remove all selected classes from filter buttons
-        //     const filterTags = document.querySelectorAll(".filter-tags-btn");
-        //     const sortBtn = document.querySelectorAll(".sort-btn-item");
-        //     const filterDropdown = document.querySelectorAll(".filter-item");
-        //     const cityDropdown = document.querySelector(".city-dropdown-content");
-        //     const parkDropdown = document.querySelector(".park-dropdown-content");
-        //     const filterDiv = document.querySelector(".filter-dropdown-div");
-        //     const dropdownLinks = filterDiv.querySelectorAll("a");
-
-        //     // remove selected class from filter tags
-        //     filterTags.forEach(function (item) {
-        //         if (item.classList.contains("filter-tags-btn-selected")) {
-        //             item.classList.remove("filter-tags-btn-selected");
-        //         }
-        //     });
-
-        //     // remove selected class from sort buttons
-        //     sortBtn.forEach(function (item) {
-        //         if (item.classList.contains("sort-btn-item-selected")) {
-        //             item.classList.remove("sort-btn-item-selected");
-        //         }
-        //     });
-
-        //     // clear the filterResultText node by setting it to an empty text node
-        //     const filterResult = document.querySelector("#filter-result");
-        //     if (filterResult.hasChildNodes()) {
-        //         filterResult.removeChild(filterResult.firstChild);
-        //     }
-
-        //     // remove userFilters from sessionStorage
-        //     let userFilters = JSON.parse(sessionStorage.getItem('userFilters'));
-        //     // remove userFilters from sessionStorage
-        //     userFilters = {
-        //         parkCity: null,
-        //         sort: null,
-        //         tags: {
-        //             wheelchair: false,
-        //             photosensitivity: false,
-        //             serviceAnimal: false,
-        //             sizeShape: false,
-        //             childSwap: false,
-        //         }
-        //     };
-        //     // sessionStorage.removeItem("userFilters");
-        //     sessionStorage.setItem('userFiltersCleared', true); // set userFiltersCleared to true'
-        //     sessionStorage.setItem('userFilters', JSON.stringify(userFilters));
-        //     console.log(userFilters);
-
-        //     // if(!userFilters) {
-        //     //     let userFilters = {
-        //     //         parkCity: null,
-        //     //         sort: null,
-        //     //         tags: {
-        //     //             wheelchair: false,
-        //     //             photosensitivity: false,
-        //     //             serviceAnimal: false,
-        //     //             sizeShape: false,
-        //     //             childSwap: false,
-        //     //         }
-        //     //     };
-        //     //     console.log(userFilters);
-        //     // }
-
-        // }
-
         // this event listener waits for the DOM to load before running the function
         document.addEventListener("DOMContentLoaded", function () {
             const sortBtn = document.querySelectorAll(".sort-btn-item");
@@ -94,6 +28,7 @@
                 
                 if (sessionStorage.setItem("userFilters", JSON.stringify(userFilters))){
                     console.log("userFilters was set in sessionStorage");
+                    history.back();
                 } else {
                     sessionStorage.setItem("userFilters", JSON.stringify(userFilters));
                     history.back();
@@ -391,7 +326,7 @@
 
     <!---Header-->
     <div class="page-list-header review-page-header">
-        <span id="search-filters-arrow" class="fa-stack header-arrow" style="display: flex;">
+        <span id="search-filters-arrow" class="fa-stack filters-header-arrow" style="display: flex;">
             <i class="fa-regular fa-circle fa-stack-2x"
                 style="color: #000000;font-size: 3em !important;margin-top: -0.15em;"></i>
             <i class="fa-solid fa-arrow-left fa-stack-1x"
