--- a/parkspage.html
+++ b/parkspage.html
@@ -24,7 +24,7 @@
 
     <!---Header-->
     <div class="page-list-header review-page-header">
-        <span class="fa-stack header-arrow" style="display: flex;">
+        <span class="fa-stack search-page-header" style="display: flex;">
             <i class="fa-regular fa-circle fa-stack-2x"
                 style="color: #000000;font-size: 3em !important;margin-top: -0.15em;"></i>
             <i class="fa-solid fa-arrow-left fa-stack-1x"
