Bug Fix: Filter page arrow needed 2 clicks to move

--- a/comparerides.html
+++ b/comparerides.html
@@ -78,7 +78,7 @@
     <div class="search-bar-div search-results-bar search-compare-page">
         <i class="fa-solid fa-magnifying-glass fa-xl mag-icon"></i>
         <input type="text" id="search-for-rides" class="search-bar" placeholder="SEARCH...">
-        <i class="fa-solid fa-sliders fa-2x filter-icon"></i>
+        <i class="fa-solid fa-sliders fa-2x filter-icon filter-compare-icon"></i>
     </div>
 
     <!--Recent Searches Div-->
