--- a/signup.html
+++ b/signup.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <script src="https://kit.fontawesome.com/a919c172a1.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/main.css">
-        <script src="js/index.js"></script>
+        <script src="js/index.js?v=5"></script>
         <title>RideRaters</title>
     </head>
     <body style="background-color:black; color: white;">
@@ -48,7 +48,7 @@
                 <!--Create Account Button Div-->
                 <div class="signup-btn-div" style="bottom: 1em;">
                     <a href="" class="signup-link">
-                        <button class="login-btn-lg" style="width: 98%;padding-left: 0em;padding-right: 0em;">Sign up</button>
+                        <button onclick="signup(event)" class="login-btn-lg" style="width: 98%;padding-left: 0em;padding-right: 0em;">Sign up</button>
                     </a>
                 </div>
                 <!--------------------->
