--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <script src="https://kit.fontawesome.com/a919c172a1.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/main.css">
-        <script src="js/index.js"></script>
+        <script src="js/index.js?v=3"></script>
         <title>RideRaters</title>
     </head>
     <body style="background-color:black; color: white;">
@@ -37,14 +37,17 @@
                 <!--Login Form: Bottom Options-->
                 <div class="login-options">
                     <a href="forgotpass.html" class="forgot-pass">FORGOT PASSWORD</a>
-                    <a href="" class="signup">SIGN UP</a>
+                    <a href="signup.html" class="signup">SIGN UP</a>
                     <i class="fa-solid fa-eye-slash show-pwd eye-login"></i>
                 </div>
                 <!------------------------------->
 
                 <!--Login Button Div-->
                 <div class="login-btn-div">
-                    <a href="" class="login-link"><button class="login-btn-lg">Log in</button></a>
+                    <a href="" class="login-link"><button onclick="login(event)" class="login-btn-lg">Log in</button></a>
+                    <!-- <button onclick="login(event)">Log in</button>
+                    -->
+                       
                 </div>
                 <!--------------------->
             </form>
