Update to the frontend to recieve backend

--- a/parkspage.html
+++ b/parkspage.html
@@ -24,7 +24,7 @@
 
     <!---Header-->
     <div class="page-list-header review-page-header">
-        <span class="fa-stack search-page-header" style="display: flex;">
+        <span class="fa-stack header-arrow" style="display: flex;">
             <i class="fa-regular fa-circle fa-stack-2x"
                 style="color: #000000;font-size: 3em !important;margin-top: -0.15em;"></i>
             <i class="fa-solid fa-arrow-left fa-stack-1x"
@@ -36,7 +36,7 @@
     <div class="search-bar-div">
         <i class="fa-solid fa-magnifying-glass fa-xl mag-icon"></i>
         <input type="text" id="search-for-parks" class="search-bar" placeholder="SEARCH...">
-        <i class="fa-solid fa-sliders fa-2x filter-icon filter-parks-icon"></i>
+        <i class="fa-solid fa-sliders fa-2x filter-icon"></i>
     </div>
 
     <!--Parks Lists Div-->
@@ -44,6 +44,8 @@
         <!--Park Rides Div-->
         <div class="parks-div">
     
+
+
         <!-- Container for search results -->
             <div id="search-results-container"></div>
 
@@ -123,7 +125,7 @@
                 <div class="parks-ride-data-div">
                     <!--Ride Name and Location Div-->
                     <div class="parks-list-item-name">
-                        <p class="parks-item-location proxima-semibold">Universal's Islands of Adventure</p>
+                        <p class="parks-item-location proxima-semibold">Universal's Island of Adventure</p>
                     </div>
                     <!--Ride Ratings Div-->
                     <div class="parks-list-item-ratings-div">
