Recent Changes to Search Results

--- a/ridesorparks.html
+++ b/ridesorparks.html
@@ -43,7 +43,7 @@
     <!--Recent Searches Div-->
     <div class="rides-title-div">
         <h2 class="recent-search-div">
-            Recent Searches
+            Search Results:
         </h2>
     </div>
 
