--- a/ridespage.html
+++ b/ridespage.html
@@ -42,7 +42,7 @@
     <!--Recent Searches Div-->
     <div class="recent-search-div">
         <h2>
-            Recent Searches
+            Search Results:
         </h2>
     </div>
     
