--- a/resetpass.html
+++ b/resetpass.html
@@ -8,6 +8,8 @@
         <link rel="stylesheet" href="css/main.css">
         <title>RideRaters</title>
         <script src="js/index.js"></script>
+        <script src="js/functions.js"></script>
+
 
     </head>
     <body style="background-color:black; color: white;">
@@ -36,9 +38,9 @@
                 <label for="oldpass">OLD PASSWORD</label><br>
                 <input type="password" id="pwd" name="pwd" minlength="8">
                 <label for="newpass">NEW PASSWORD</label><br>
-                <input type="password" id="pwd" name="pwd" minlength="8">
+                <input type="password" id="newpwd1" name="newpwd1" minlength="8">
                 <label for="confirmpass">CONFIRM PASSWORD</label><br>
-                <input type="password" id="pwd" name="pwd" minlength="8">
+                <input type="password" id="newpwd2" name="newpwd2" minlength="8">
                 <!--Login Form: Bottom Options-->
                 <div class="resetpass-eyes">
                     <i class="fa-solid fa-eye-slash show-pwd eye-top"></i>
