--- a/login.html
+++ b/login.html
@@ -48,7 +48,12 @@
                 <div class="login-btn-div">
                     <a href="" class="login-link"><button onclick="login(event)" class="login-btn-lg">Log in</button></a>
                 </div>
-                <!--------------------->
+                <!---------------
+
+                <div class="login-btn-div">
+                    <a href="" class="login-link"><button onclick="fetchRides(event)" class="login-btn-lg">Fetch Rides Test</button></a>
+                </div>
+---------------->
             </form>
         </div>
         <!-------------------->
