--- a/home.html
+++ b/home.html
@@ -7,6 +7,8 @@
     <script src="https://kit.fontawesome.com/a919c172a1.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/main.css">
     <script src="js/index.js"></script>
+    <script src="js/functions.js"></script>
+
     <title>RideRaters</title>
 </head>
 <body>
