--- a/forgotpass.html
+++ b/forgotpass.html
@@ -8,6 +8,16 @@
         <link rel="stylesheet" href="css/main.css">
         <title>RideRaters</title>
         <script src="js/index.js"></script>
+        <script>
+            document.addEventListener("DOMContentLoaded", function () {
+                const backArrow = document.querySelector('.header-arrow');
+                backArrow.addEventListener('click', function () {
+                    // on click, go back to previous page
+                    console.log('clicked');
+                    window.history.back();
+                });
+            });
+        </script>
 
     </head>
     <body style="background-color:black; color: white;">
@@ -35,7 +45,7 @@
                 <input type="email" id="email" name="email" placeholder=""><br>
                 <!--Forgot Password Form: Bottom Options-->
                 <div class="forgot-options">
-                    <a href="" class="signup">SIGN UP</a>
+                    <a href="signup.html" class="signup">SIGN UP</a>
                 </div>
                 <!------------------------------->
 
