--- a/signup.html
+++ b/signup.html
@@ -8,7 +8,16 @@
         <link rel="stylesheet" href="css/main.css">
         <script src="js/index.js"></script>
         <script src="js/functions.js"></script>
-
+        <script>
+            document.addEventListener("DOMContentLoaded", function () {
+                const backArrow = document.querySelector('.header-arrow');
+                backArrow.addEventListener('click', function () {
+                    // on click, go back to previous page
+                    console.log('clicked');
+                    window.history.back();
+                });
+            });
+        </script>
         <title>RideRaters</title>
     </head>
     <body style="background-color:black; color: white;">
