--- a/review.html
+++ b/review.html
@@ -137,7 +137,7 @@
 
         document.addEventListener("DOMContentLoaded", function () {
             // Your JavaScript code here
-            var vRiderating;
+           
             //create event listener for feedback-stars class
             document.getElementById('feedback-stars').addEventListener("click", function () {
                 // if id='one-star' is selected then vRiderating = 1
@@ -192,7 +192,7 @@
 
             var vUserid = sessionStorage.getItem("userid");
             var vRideid = Number(rideSelectedId);
-
+            var vRiderating = Number(sessionStorage.getItem("vRiderating")); // Get the current value of the rating input
 
             
 
