Bug Fix: Fan Fav Ratings

--- a/home.html
+++ b/home.html
@@ -131,7 +131,7 @@
     <!------BOTTOM MENU------>
     <footer class="app-footer">
         <!--Advertisment Space-->
-        <div class="ad-space-div" style="margin-top: 4.3em;">
+        <div class="ad-space-div">
             <img src="media/imgs/ad-cow.png" alt="Rent-a-cow advert" class="ad-space-cow">
         </div>
         <div class="icon-container">
