--- a/resetpass.html
+++ b/resetpass.html
@@ -9,7 +9,16 @@
         <title>RideRaters</title>
         <script src="js/index.js"></script>
         <script src="js/functions.js"></script>
-
+        <script>
+            document.addEventListener("DOMContentLoaded", function () {
+                    const backArrow = document.querySelector('.header-arrow');
+                    backArrow.addEventListener('click', function () {
+                        // on click, go back to previous page
+                        console.log('clicked');
+                        window.history.back();
+                    });
+                });
+        </script>
 
     </head>
     <body style="background-color:black; color: white;">
